# teotile

./: Cargo.toml  LICENSE  README.md  index.html  index.js  styles.css
.github/workflows/: build-and-deploy-web.yml
embedded/: .gitignore  Cargo.toml
embedded/src/: gamepad.rs  led_strip.rs  main.rs  ws2812_test.rs
engine/: Cargo.toml  build.rs
engine/src/: animation.rs  error.rs  game.rs  io.rs  lib.rs  main.rs  random.rs
engine/src/game/: connect_four.rs  doodle_jump.rs  flappy_bird.rs  maze.rs  menu.rs  paint.rs  pong.rs  shooter.rs  snake.rs  space_invaders.rs  tetris.rs  tictactoe.rs  tugofwar.rs  walldodger.rs
engine/static/: .gitignore
game_ideas/heatmap_search/: README.md  heatmap_gen.py
pkg/: package.json  teotile_web.d.ts  teotile_web.js  teotile_web_bg.wasm  teotile_web_bg.wasm.d.ts
rpi/: Cargo.toml  README.md
rpi/src/: gamepad.rs  led_strip.rs  main.rs  output.rs
src/: game.rs  main.rs
src/game/: connect_four.rs
tui/: Cargo.toml
tui/src/: main.rs
web/: Cargo.toml  build.sh
web/src/: lib.rs
web/static/: index.html  index.js  styles.css
