[package]
name = "teotile"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libm = "0.2.8"
rand_core = { version = "0.6.4", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
smallvec = { version = "1.13.2", default-features = false, features = ["const_generics"] }

[build-dependencies]
image = "0.25.1"
